fix::mobile responsiveness

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "previ ew": "vite preview"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^4.0.2",
@@ -13,6 +13,7 @@
     "firebase": "^12.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1"
   },
